[package]
name = "ser-data-loadr"
authors = ["Jonas Zunker <jonas-zunker@web.de>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jon-zu/ser-data-loader"

[features]
default = ["use_tokio"]
use_tokio = ["tokio"]


[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
futures = "0.3.31"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt", "macros"], optional = true }
